--- a/src/Component/Products.css
+++ b/src/Component/Products.css
@@ -14,9 +14,10 @@
     align-content: flex-start;
 }
 
+
 .description{
-    margin-top: 1%;
-    margin-left: 12%;
+    margin-top: -9%;
+    margin-left: 7%;
 }
 
 .des{
@@ -29,3 +30,6 @@
     margin-left: 16.2%;
 }
 
+.imgs{
+    height: 190px;
+}
